video splitter added

--- a/notebooks/sound_extractor.ipynb
+++ b/notebooks/sound_extractor.ipynb
@@ -9,8 +9,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 98.4 ms, sys: 14.1 ms, total: 113 ms\n",
-      "Wall time: 162 ms\n"
+      "CPU times: user 86.9 ms, sys: 4.17 ms, total: 91.1 ms\n",
+      "Wall time: 107 ms\n"
      ]
     }
    ],
@@ -39,10 +39,39 @@
     {
      "data": {
       "text/plain": [
-       "['../data/source/0.mkv',\n",
-       " '../data/source/1.mkv',\n",
-       " '../data/source/2.mkv',\n",
-       " '../data/source/3.mkv']"
+       "['../data/source/0_0.mkv',\n",
+       " '../data/source/10_2700.mkv',\n",
+       " '../data/source/11_3600.mkv',\n",
+       " '../data/source/12_4500.mkv',\n",
+       " '../data/source/13_5400.mkv',\n",
+       " '../data/source/14_0.mkv',\n",
+       " '../data/source/15_900.mkv',\n",
+       " '../data/source/16_1800.mkv',\n",
+       " '../data/source/17_2700.mkv',\n",
+       " '../data/source/18_3600.mkv',\n",
+       " '../data/source/19_4500.mkv',\n",
+       " '../data/source/1_900.mkv',\n",
+       " '../data/source/20_5400.mkv',\n",
+       " '../data/source/21_6300.mkv',\n",
+       " '../data/source/22_0.mkv',\n",
+       " '../data/source/23_900.mkv',\n",
+       " '../data/source/24_1800.mkv',\n",
+       " '../data/source/25_2700.mkv',\n",
+       " '../data/source/26_3600.mkv',\n",
+       " '../data/source/27_4500.mkv',\n",
+       " '../data/source/28_5400.mkv',\n",
+       " '../data/source/29_6300.mkv',\n",
+       " '../data/source/2_1800.mkv',\n",
+       " '../data/source/30_7200.mkv',\n",
+       " '../data/source/31_8100.mkv',\n",
+       " '../data/source/32_9000.mkv',\n",
+       " '../data/source/3_2700.mkv',\n",
+       " '../data/source/4_3600.mkv',\n",
+       " '../data/source/5_4500.mkv',\n",
+       " '../data/source/6_5400.mkv',\n",
+       " '../data/source/7_0.mkv',\n",
+       " '../data/source/8_900.mkv',\n",
+       " '../data/source/9_1800.mkv']"
       ]
      },
      "execution_count": 2,
@@ -106,7 +135,7 @@
     {
      "data": {
       "text/plain": [
-       "'ffmpeg -y -i ../data/source/0.mkv -ss 3606 -t 5.05 -ab 320k -ar 25718 -ac 1 -vn ../data/sliced/0_3600_5.05_25718.wav && chown 1000:1000 ../data/sliced/0_3600_5.05_25718.wav'"
+       "'ffmpeg -y -i ../data/source/13_5400.mkv -ss 54 -t 4.63 -ab 320k -ar 42127 -ac 1 -vn ../data/sliced/4_48_4.63_42127.wav && chown 1000:1000 ../data/sliced/4_48_4.63_42127.wav'"
       ]
      },
      "execution_count": 4,
@@ -127,8 +156,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 6.73 ms, sys: 30.2 ms, total: 36.9 ms\n",
-      "Wall time: 2min 7s\n"
+      "CPU times: user 982 ms, sys: 51.9 s, total: 52.9 s\n",
+      "Wall time: 52min 34s\n"
      ]
     }
    ],
@@ -144,7 +173,7 @@
     "        os.system(cmd)\n",
     "threads = []\n",
     "\n",
-    "for task in ffmpeg_commands[]:\n",
+    "for task in sorted(ffmpeg_commands):\n",
     "    threads += [threading.Thread(target=run_command, args=(task,))]\n",
     "\n",
     "for j in threads:\n",
