--- a/notebooks/test/wav_resample_cupy_gpu.ipynb
+++ b/notebooks/test/wav_resample_cupy_gpu.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function point_in_polygon_bitmap at 0x7f77129eba60>\n",
+      "<function point_in_polygon_bitmap at 0x7fb5e5fd6a60>\n",
       "0.13.0\n",
-      "CPU times: user 819 µs, sys: 0 ns, total: 819 µs\n",
-      "Wall time: 550 µs\n"
+      "CPU times: user 5.77 s, sys: 840 ms, total: 6.61 s\n",
+      "Wall time: 9.03 s\n"
      ]
     }
    ],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -52,8 +52,8 @@
       "Audio length: 4.5273 seconds\n",
       "Lowest amplitude: -5381\n",
       "Highest amplitude: 5056\n",
-      "CPU times: user 87.5 ms, sys: 289 µs, total: 87.8 ms\n",
-      "Wall time: 85.4 ms\n"
+      "CPU times: user 91.5 ms, sys: 3.96 ms, total: 95.5 ms\n",
+      "Wall time: 92.8 ms\n"
      ]
     },
     {
@@ -70,7 +70,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,15 +106,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 2.9 ms, sys: 18.8 ms, total: 21.7 ms\n",
-      "Wall time: 20.3 ms\n"
+      "CPU times: user 5.1 ms, sys: 20.1 ms, total: 25.2 ms\n",
+      "Wall time: 24.9 ms\n"
      ]
     }
    ],
@@ -130,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
