train & test loaders ready

--- a/notebooks/1_wav_autoencoder.ipynb
+++ b/notebooks/1_wav_autoencoder.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
     "import numpy as np\n",
     "import torch\n",
+    "\n",
     "import scipy.io.wavfile\n",
     "import cupy as cp\n",
     "import cusignal\n",
@@ -18,14 +19,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "class data_from_dir(torch.utils.data.Dataset):\n",
     "    'Characterizes a dataset for PyTorch'\n",
-    "    def __init__(self, file_dir):\n",
+    "    def __init__(self, file_dir, resample=False):\n",
     "        'Initialization'\n",
+    "        self.resample = resample\n",
     "        self.file_dir = file_dir\n",
     "        self.file_filenames = [ x for x in os.listdir(file_dir) ]\n",
     "        \n",
@@ -33,25 +35,27 @@
     "        'Denotes the total number of samples'\n",
     "        return len(self.file_filenames)\n",
     "\n",
-    "    def __getitem__(self, index):\n",
+    "    def __getitem__(self, index, resample=False):\n",
     "        'Load one sample of data'\n",
     "        # Select sample\n",
     "        sr, wave = scipy.io.wavfile.read(os.path.join(self.file_dir, self.file_filenames[index]))\n",
-    "        \n",
-    "        # Let's resample and scale:\n",
-    "        target_length = 5 # seconds\n",
-    "        target_sr = 48000 # sampling rate, samples per second\n",
-    "        wave_gpu = cp.asarray(wave)\n",
-    "        resampled_wave_gpu = cusignal.resample(wave_gpu, target_sr*target_length)\n",
-    "        resampled_wave = cp.asnumpy(resampled_wave_gpu).astype(int)\n",
-    "        scaled_wave = np.int16(resampled_wave/np.max(np.abs(resampled_wave)) * 32767)\n",
-    "\n",
-    "        return scaled_wave"
+    "        if self.resample:\n",
+    "            # Let's resample and scale:\n",
+    "            target_length = 5 # seconds\n",
+    "            target_sr = 48000 # sampling rate, samples per second\n",
+    "            wave_gpu = cp.asarray(wave)\n",
+    "            resampled_wave_gpu = cusignal.resample(wave_gpu, target_sr*target_length)\n",
+    "            resampled_wave = cp.asnumpy(resampled_wave_gpu).astype(int)\n",
+    "            scaled_wave = np.int16(resampled_wave/np.max(np.abs(resampled_wave)) * 32767)\n",
+    "            return scaled_wave\n",
+    "        else:\n",
+    "            return wave\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -60,19 +64,19 @@
        "78581"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset = data_from_dir(\"../data/dataset/wav\")\n",
+    "dataset = data_from_dir(\"../data/dataset/resampled\", resample=False)\n",
     "len(dataset)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -88,8 +92,8 @@
       "Highest amplitude:  32767\n",
       "\n",
       "Scaled from dataset:\n",
-      "CPU times: user 111 ms, sys: 7.89 ms, total: 119 ms\n",
-      "Wall time: 117 ms\n"
+      "CPU times: user 109 ms, sys: 202 µs, total: 109 ms\n",
+      "Wall time: 108 ms\n"
      ]
     },
     {
@@ -106,7 +110,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 89,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +160,7 @@
        "<IPython.lib.display.Audio object>"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,10 +173,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train dataset size:  62864\n",
+      "Test dataset size:   15717\n",
+      "\n",
+      "CPU times: user 25.4 ms, sys: 1.23 ms, total: 26.7 ms\n",
+      "Wall time: 6.52 ms\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "# now split whole dataset to train and test subsets\n",
+    "# get 10% for tests\n",
+    "\n",
+    "train_size = int(0.8 * len(dataset))\n",
+    "test_size = len(dataset) - train_size\n",
+    "train_dataset, test_dataset = torch.utils.data.random_split(dataset, [train_size, test_size])\n",
+    "print(\"Train dataset size: \", len(train_dataset))\n",
+    "print(\"Test dataset size:  \", len(test_dataset))\n",
+    "print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 3.69 ms, sys: 0 ns, total: 3.69 ms\n",
+      "Wall time: 928 µs\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "train_loader = torch.utils.data.DataLoader(train_dataset, batch_size=50, shuffle=True) #, num_workers=4) # num_workers have an issue, not working\n",
+    "test_loader = torch.utils.data.DataLoader(test_dataset, batch_size=50, shuffle=True) #, num_workers=4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 14.3 s, sys: 2.23 s, total: 16.6 s\n",
+      "Wall time: 4.32 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-1229, -1186,   299,  ...,  1720,  1801,   288],\n",
+       "        [-2138, -3559, -4310,  ...,  4979,  2302,  -146],\n",
+       "        [ 3186,  3196,  2973,  ...,    74,  -320,   126],\n",
+       "        ...,\n",
+       "        [ 4878,  5771,  6001,  ...,  -280,  1353,  3269],\n",
+       "        [ 3732,  3536,  2084,  ...,     8,  -999,   512],\n",
+       "        [ 3298,  3755,  3641,  ...,   373,  -140,   527]], dtype=torch.int16)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "for batch in test_loader:\n",
+    "    None\n",
+    "batch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'torch.Tensor'>\n",
+      "240000\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(batch[1]))\n",
+    "print(len(batch[1]))"
+   ]
   },
   {
    "cell_type": "code",
